# amethyst

./: Cargo.toml  build_shaders.sh
amethyst_assets/: Cargo.toml
amethyst_assets/src/: asset.rs  loader.rs  reload.rs  storage.rs
amethyst_assets/src/source/: dir.rs  http.rs  mod.rs
amethyst_core/: Cargo.toml
amethyst_core/src/: timing.rs
amethyst_rendy/compiled/fragment/: terrain_flat.frag.spv  terrain_shaded.frag.spv
amethyst_rendy/compiled/vertex/: terrain_pos_norm_tex.vert.spv  terrain_pos_tex.vert.spv
amethyst_rendy/shaders/fragment/: terrain_flat.frag  terrain_shaded.frag
amethyst_rendy/src/: bundle.rs  mtl.rs  plugins.rs  system.rs
amethyst_rendy/src/formats/: mtl.rs
amethyst_rendy/src/pass/: mod.rs  terrain_flat.rs  terrain_shaded.rs
amethyst_terrain/: Cargo.toml
amethyst_terrain/compiled/: terrain.frag.spv  terrain.vert.spv
amethyst_terrain/shaders/: terrain.frag  terrain.vert
amethyst_terrain/src/: lib.rs  pass.rs  terrain.rs
amethyst_ui/compiled/: ui.frag.spv  ui.vert.spv
amethyst_ui/shaders/: ui.frag  ui.vert
amethyst_ui/src/: glyphs.rs  pass.rs
examples/assets/mesh/: MountainTerrain.mtl
examples/assets/prefab/: terrain.ron
examples/assets/texture/: texture.psd
examples/terrain/: main.rs
examples/terrain/config/: display.ron
src/: app.rs  lib.rs
